--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -28,6 +28,10 @@
         <%= link_to "StartupsOnRails", root_path, class: "text-xl font-bold" %>
         <div class="flex items-center space-x-4">
           <% if user_signed_in? %>
+            <% if current_user.admin? || current_user.company_owner? %>
+              <%= link_to "Add Company", new_admin_company_path, 
+                          class: "px-4 py-2 bg-green-600 text-white rounded hover:bg-green-700" %>
+            <% end %>
             <% if current_user.admin? %>
               <%= link_to "Admin", admin_dashboard_path, class: "text-gray-600 hover:text-gray-800" %>
             <% end %>
