--- a/app/views/admin/companies/new.html.erb
+++ b/app/views/admin/companies/new.html.erb
@@ -1,4 +1,4 @@
-<div>
-  <h1 class="font-bold text-4xl">Admin::Companies#new</h1>
-  <p>Find me in app/views/admin/companies/new.html.erb</p>
+<div class="max-w-4xl mx-auto px-4 py-8">
+  <h1 class="text-3xl font-bold mb-6">Create New Company</h1>
+  <%= render 'form', company: @company %>
 </div>
