--- a/app/views/admin/dashboard/index.html.erb
+++ b/app/views/admin/dashboard/index.html.erb
@@ -43,6 +43,16 @@
         </div>
       <% end %>
 
+      <!-- Manage Categories -->
+      <%= link_to admin_categories_path, class: "p-6 bg-white rounded-lg border border-gray-200 hover:border-blue-500 hover:shadow-lg transition-all" do %>
+        <div class="flex flex-col items-center">
+          <svg class="w-8 h-8 text-green-600 mb-2" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 7v10a2 2 0 002 2h14a2 2 0 002-2V9a2 2 0 00-2-2h-6l-2-2H5a2 2 0 00-2 2z"/>
+          </svg>
+          <span class="text-sm font-medium text-gray-700">Manage Categories</span>
+        </div>
+      <% end %>
+
       <!-- Pending Approvals -->
       <%= link_to admin_companies_path(pending: true), class: "p-6 bg-white rounded-lg border border-gray-200 hover:border-blue-500 hover:shadow-lg transition-all" do %>
         <div class="flex flex-col items-center">
