--- a/app/views/companies/index.html.erb
+++ b/app/views/companies/index.html.erb
@@ -16,20 +16,46 @@
 
         <!-- Multiple select for categories -->
         <div>
-          <%= f.label :categories, "Category", class: "block text-sm font-medium text-gray-700 mb-1" %>
-          <%= f.collection_select :categories, Category.all, :id, :name,
-            { selected: params[:categories] },
-            { multiple: true, class: "tom-select" } %>
+          <%= f.label :categories, "Categories", class: "block text-sm font-medium text-gray-700 mb-1" %>
+          <%= f.collection_select :categories, 
+                Category.order(:name), 
+                :id, :name,
+                { selected: params[:categories], include_blank: false },
+                { multiple: true, 
+                  class: "tom-select",
+                  data: { controller: "tom-select" } } %>
         </div>
 
-        <!-- Tag cloud style filter -->
-        <div data-controller="tag-filter">
-          <% Tag.all.each do |tag| %>
-            <%= check_box_tag "tags[]", tag.id, params[:tags]&.include?(tag.id.to_s),
-                  class: "hidden peer", data: { action: "change->filter-form#submit" } %>
-            <%= label_tag "tags_#{tag.id}", tag.name,
-                  class: "tag-label peer-checked:bg-blue-100 peer-checked:border-blue-500" %>
-          <% end %>
+        <!-- Multiple select for tags -->
+        <div class="mb-4">
+          <%= f.label :tags, "Filter by Technologies", class: "block text-sm font-medium text-gray-700 mb-2" %>
+          <div class="relative" data-controller="tag-filter">
+            <%= f.collection_select :tags, 
+                  Tag.order(:name), 
+                  :id, :name,
+                  { selected: params[:tags], include_blank: false },
+                  { multiple: true,
+                    class: "tom-select",
+                    data: {
+                      controller: "tom-select",
+                      action: "change->filter-form#submit"
+                    } } %>
+            
+            <% if params[:tags].present? %>
+              <div class="mt-2 flex flex-wrap gap-2">
+                <% Tag.where(id: params[:tags]).each do |tag| %>
+                  <%= link_to companies_path(params.to_unsafe_h.except(:tags).merge(tags: params[:tags] - [tag.id.to_s])), 
+                        class: "flex items-center px-2 py-1 bg-blue-100 text-blue-700 rounded-full text-sm hover:bg-blue-200",
+                        data: { turbo_action: "replace" } do %>
+                    <%= tag.name %>
+                    <svg class="w-4 h-4 ml-1" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                      <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12" />
+                    </svg>
+                  <% end %>
+                <% end %>
+              </div>
+            <% end %>
+          </div>
         </div>
       </div>
       
