--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -47,7 +47,7 @@
 
     <p class="notice"><%= notice %></p>
     <p class="alert"><%= alert %></p>
-    <main class="container mx-auto mt-8 px-5 flex">
+    <main class="max-w-7xl mx-auto mt-8 px-5 w-full">
       <%= yield %>
     </main>
   </body>
